--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,16 @@
 *.cache
 *.ilk
 *.log
-*.log
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+[Tt]est[Rr]esult*
+packages/
+Coverage
+test/artifacts/*
+launchSettings.json
+artifacts
